# whisperX

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  test_database.py  test_upload.py
app/: deps.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: health.py  jobs.py  metrics.py
app/core/: config.py  logging.py
app/models/: __init__.py  database.py  schemas.py
app/services/: mock_whisperx_service.py  whisperx_service.py
app/utils/: __init__.py  auth.py  file_utils.py
docs/: ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  SERVICE_ACCOUNT_SETUP.md  WHISPERX_SERVICE.md
scripts/: deploy.sh  dev.sh  setup-service-account.sh  test-production.sh
tests/: __init__.py  conftest.py  test_api.py
